WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218617
WebSocket constructor should not throw in case port is blocked
https://bugs.webkit.org/show_bug.cgi?id=218617
Summary
WebSocket constructor should not throw in case port is blocked
youenn fablet
Reported
2020-11-05 08:24:18 PST
WebSocket constructor should not throw in case port is blocked
Attachments
Patch
(17.21 KB, patch)
2020-11-05 08:27 PST
,
youenn fablet
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(20.74 KB, patch)
2020-11-05 11:30 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-11-05 08:27:51 PST
Created
attachment 413302
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2020-11-05 09:11:04 PST
<
rdar://problem/71080398
>
youenn fablet
Comment 3
2020-11-05 11:30:08 PST
Created
attachment 413333
[details]
Patch for landing
EWS
Comment 4
2020-11-05 12:05:40 PST
Committed
r269459
: <
https://trac.webkit.org/changeset/269459
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 413333
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug