WebSocket constructor should not throw in case port is blocked https://bugs.webkit.org/show_bug.cgi?id=218617 LayoutTests/imported/w3c:

Reviewed by Alex Christensen.

* web-platform-tests/websockets/Create-blocked-port.any-expected.txt:
* web-platform-tests/websockets/Create-blocked-port.any.worker-expected.txt:

Source/WebCore:

Reviewed by Alex Christensen.

Update as per spec, see https://github.com/web-platform-tests/wpt/pull/5212.
Covered by existing tests.

* Modules/websockets/WebSocket.cpp:
(WebCore::WebSocket::connect):

LayoutTests:

<rdar://problem/71080398>

Reviewed by Alex Christensen.

Removing no longer valid test, correct version covered by WPT test.

* http/tests/websocket/tests/hybi/url-parsing-expected.txt:
* http/tests/websocket/tests/hybi/url-parsing.html:


Canonical link: https://commits.webkit.org/231278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269459 268f45cc-cd09-0410-ab3c-d52691b4dbfc